--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,49 @@
 
 .mixed {
   margin-top: 50px;
-  width: 100%;
+  max-width: 700px;
+  /* width: 70% */
   height: 500px;
+  border: 1px solid red;
+}
+
+.react-horizontal-scrolling-menu--scroll-container {
+  max-width: 600px;
+}
+
+.react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
+  display: none;
+}
+
+.react-horizontal-scrolling-menu--scroll-container {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Table */
+
+table {
+  margin-top: 20px;
+  max-width: 700px;
+  margin-left: 30px;
+  margin-right: 20px;
+  border-collapse: collapse;
+  line-height: 1.7;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
+
+th,
+td {
+  padding: 0px;
+  text-align: left;
+}
+
+th {
+  background-color: "#4CAF50";
+  color: black;
 }
